@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<argLine>-XX:+EnableDynamicAgentLoading -Djava.rmi.server.hostname=localhost</argLine>
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
@@ -67,10 +68,10 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.graalvm.buildtools</groupId>
-				<artifactId>native-maven-plugin</artifactId>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.graalvm.buildtools</groupId>-->
+<!--				<artifactId>native-maven-plugin</artifactId>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -85,5 +86,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
